fix images reference

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       }
 
       #app_logo {
-        background-image: url("images/256.png");
+        background-image: url("Images/256.png");
         background-repeat: no-repeat;
         width: 256px;
         height: 256px;
